deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: test-container-01
        image: 562086155953.dkr.ecr.us-east-2.amazonaws.com/test-repo:latest-dev-dev
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 1
