deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-02
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: test-container-02
        image: httpd:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 1
