service01.yml
apiVersion: v1
kind: Service
metadata:
  name: service01
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - targetPort: 8080
    port: 80
