service02.yml
apiVersion: v1
kind: Service
metadata:
  name: service02
spec:
  selector:
    app: apache
  type: LoadBalancer
  ports:
  - targetPort: 80
    port: 81
